# libemotify-stderr

./: CMakeLists.txt  README.md
src/: emotify-stderr.c
